src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>SomTv_AdFerloesrelevant__c</fullName>
        <description>TA gesteuert</description>
        <label>AdF erlösrelevant</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomTv_GAausserhalbCommitment__c</fullName>
        <description>Geschäftsart außerhalb Commitment / Zubuchung</description>
        <inlineHelpText>Geschäftsart außerhalb Commitment / Zubuchung</inlineHelpText>
        <label>GA außerhalb Commitment/Zubuchung</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomTv_GAinnerhalbCommitment__c</fullName>
        <description>Geschäftsart innerhalb Commitment / Zubuchung</description>
        <inlineHelpText>Geschäftsart innerhalb Commitment / Zubuchung</inlineHelpText>
        <label>GA innerhalb Commitment/Zubuchung</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomTv_ManuellNichtKonvergent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>manuell</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomTv_PaketExtra__c</fullName>
        <description>Geschäftsarten für Pakete Extra und Diverse (außerhalb Commitment)
Kunde / Konzern exkl. Agentur</description>
        <inlineHelpText>Geschäftsarten für Pakete Extra und Diverse (außerhalb Commitment)
Kunde / Konzern exkl. Agentur</inlineHelpText>
        <label>GA Paket Extra / Diverse</label>
        <picklist>
            <picklistValues>
                <fullName>1105 DRTV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1107 Gegengeschäft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1115 Paket Extra Standard Spot 12Min</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1121 Paket Extra SpecialAds 12Min</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1122 Paket Extra SpecialAds Non12Min</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1139 Freispot / Goodwill Inflation / Panel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1177 Wahlwerbung</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1180 Sonstige Erlöse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1184 Wunschplatzierung Spotkontigent P7S1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1189 Sonstiges</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1191 Restwerbezeit klassisch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1192 Restwerbezeit Special Ads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1194 Spotkontigent P7S1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1195 Barter-Agentur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1195 Sondervolumen-Agentur</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SomTv_Produkthierarchieebene1__c</fullName>
        <label>Produkthierarchieebene 1</label>
        <picklist>
            <picklistValues>
                <fullName>1. Sponsoring</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2. Splits/Spots</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Placements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Promostory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Gewinnspiele</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. Lizenzierung</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7. Testimonial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8. Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9. Content Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10. Produktionskosten</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SomTv_Produkthierarchieebene2__c</fullName>
        <label>Produkthierarchieebene 2</label>
        <picklist>
            <picklistValues>
                <fullName>1.1 Program Sponsoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.2 Trailersponsoring A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.4 Icon-/ Grafiksponsoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.1 Splits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.2 Spots</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SomTv_Produkthierarchieebene3__c</fullName>
        <label>Produkthierarchieebene 3</label>
        <picklist>
            <picklistValues>
                <fullName>2.1.1 Cut-In</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.1.2 Single-Split (auch Single-Split weather oder News-Countdown)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.1.3 Trailer-Split</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.1.4 Programm-Split (auch LiveProgram Split)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.1.5 Pre-Split (u.a. MoveSplit/Diary)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.1.6 Highlight-Split</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.1.7 Abspann-Split</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.2.1 Sender-Spot</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SomTv_Produkthierarchieebene_5__c</fullName>
        <description>5. Ebene der Produkte</description>
        <inlineHelpText>5. Ebene der Produkte</inlineHelpText>
        <label>Produkthierarchieebene 5</label>
        <picklist>
            <picklistValues>
                <fullName>2.1.2.1.1 Individualität I: Single Split</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.1.2.1.2 Individualität II: Single Split</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.1.2.1.3 Individualität III: Single Split</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.1.2.2.1 Individualität I: Weather</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.1.2.2.2 Individualität II: Weather</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.1.2.3.1 Individualität I: News-Countdown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.1.2.3.2 Individualität II: News-Countdown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SomTv_Rabattierfaehig__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Gliedert AdFactory Produkte nach grundsätzlicher Rabattierfähigkeit.</description>
        <inlineHelpText>Gliedert AdFactory Produkte nach grundsätzlicher Rabattierfähigkeit.</inlineHelpText>
        <label>rabattierfähig</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomTv_SpecialAds12Min__c</fullName>
        <description>Geschäftsart Special Ads 12 Min</description>
        <label>Special Ads 12 Min</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomTv_SpecialAdsNon12Min__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Geschäftsarten Special Ads non 12 Min - Paket extra</description>
        <inlineHelpText>Geschäftsarten Special Ads non 12 Min - Paket extra</inlineHelpText>
        <label>Special Ads non 12 Min</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomTv_SpecialAdsRelevant__c</fullName>
        <description>TA gesteuert</description>
        <label>Special Ads relevant</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomTv_TAGesamt__c</fullName>
        <label>TA gesamt</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>Adf_aktiv</fullName>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>PRODUCT2.NAME</columns>
        <columns>SomTv_AdFerloesrelevant__c</columns>
        <columns>SomTv_GAausserhalbCommitment__c</columns>
        <columns>SomTv_Produkthierarchieebene1__c</columns>
        <columns>SomTv_Produkthierarchieebene2__c</columns>
        <columns>SomTv_Produkthierarchieebene3__c</columns>
        <columns>SomTv_SpecialAdsNon12Min__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SomTv_Produkthierarchieebene1__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Adf aktiv</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>Alle</fullName>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>PRODUCT2.NAME</columns>
        <columns>SomTv_AdFerloesrelevant__c</columns>
        <columns>SomTv_GAausserhalbCommitment__c</columns>
        <columns>SomTv_Produkthierarchieebene1__c</columns>
        <columns>SomTv_Produkthierarchieebene2__c</columns>
        <columns>SomTv_Produkthierarchieebene3__c</columns>
        <columns>SomTv_SpecialAdsNon12Min__c</columns>
        <filterScope>Everything</filterScope>
        <label>Alle</label>
        <language>de</language>
    </listViews>
</CustomObject>